--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ dotnet: 2.1.300
 script:
   - dotnet restore
   - dotnet tool install --global dotnet-sonarscanner
-  - dotnet sonarscanner begin /k:"ironiclensflare_Logger" /d:sonar.login=${SONAR_TOKEN} /d:sonar.host.url="https://sonarcloud.io"
+  - dotnet sonarscanner begin /k:"ironiclensflare_Logger" /d:sonar.login=${SONAR_TOKEN} /d:sonar.host.url="https://sonarcloud.io" /o:ironiclensflare
   - dotnet build
-  - dotnet sonarscanner end
+  - dotnet sonarscanner end /k:"ironiclensflare_Logger"
 addons:
   sonarcloud:
     organization: "ironiclensflare"
