--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ dotnet: 2.1.300
 script:
   - dotnet restore
   - dotnet tool install --global dotnet-sonarscanner
-  - dotnet sonarscanner begin /k:"ironiclensflare_Logger" /d:sonar.login=${SONAR_TOKEN} /d:sonar.host.url="https://sonarcloud.io" /o:ironiclensflare
+  - export PATH="$PATH:/home/travis/.dotnet/tools"
+  - dotnet sonarscanner begin /k:"ironiclensflare_Logger" /d:sonar.login=${SONAR_TOKEN} /d:sonar.host.url="https://sonarcloud.io"
   - dotnet build
-  - dotnet sonarscanner end /k:"ironiclensflare_Logger"
+  - dotnet sonarscanner end
 addons:
   sonarcloud:
     organization: "ironiclensflare"
