This might work

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ script:
   - dotnet restore
   - dotnet tool install --global dotnet-sonarscanner
   - export PATH="$PATH:/home/travis/.dotnet/tools"
-  - dotnet sonarscanner begin /k:"ironiclensflare_Logger" /d:sonar.login=${SONAR_TOKEN} /d:sonar.host.url="https://sonarcloud.io"
+  - dotnet sonarscanner begin /k:"ironiclensflare_Logger" /d:sonar.login=${SONAR_TOKEN} /d:sonar.host.url="https://sonarcloud.io" /o:ironiclensflare
   - dotnet build
-  - dotnet sonarscanner end
+  - dotnet sonarscanner end /d:sonar.login=${SONAR_TOKEN}
 addons:
   sonarcloud:
     organization: "ironiclensflare"
